Adding of a few html tags according to frontendchecklist.io

--- a/config/scaffold/layout/layout.twig
+++ b/config/scaffold/layout/layout.twig
@@ -1,8 +1,12 @@
-<html>
+<!doctype html>
+<html class="{% if isDev %}dev{% endif %}" lang="">
   <head>
-    <title>Layout</title>
+    {% include '../_snippets/html-head.twig' %}
+    <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
     {% block content %}{% endblock %}
+
+    <script src="assets/js/main.bundle.js"></script>
   </body>
 </html>
