--- a/src/preview/layout.twig
+++ b/src/preview/layout.twig
@@ -1,11 +1,4 @@
 <!--
-...................................................................................................
-...................................................................................................
-...................................................................................................
-................................................,,,,...............................................
-........................................#@@@@@@@@@@@@@@@@@@/.......................................
-....................................*@@@@@@@@@@@@@@@@@@@@@@@@@@,...................................
-..................................@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&.................................
 ...............................*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@...............................
 ..............................@@@@#***/&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.............................
 ............................@@@((@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@/...........................
@@ -32,30 +25,17 @@
 ....................@@@@@@@@@@@@@@@@@@@@@,,,@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,,
 ....................@@@@@@@@@@@@@@@@@@@@@*,@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,,
 ....................@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,,
-....................@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,,
-...................*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,,
-...................#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@/,,,,,,,,,,,,,,,,,,
-...................&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#,,,,,,,,,,,,,,,,,,
-...................@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&,,,,,,,,,,,,,,,,,,
-...................@@@@@@@@@@@@@@@@@@@@@@@...............*@@@@@@@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,
-...................@@@@@@@@@@@@@@@@@@@.......................,@@@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,
-..................*@@@@@@@@@@@@@@@@(............................@@@@@@@@@@@@@@@@@,,,,,,,,,,,,,,,,,,
-..................#@@@@@@@@@@@@@@&................................@@@@@@@@@@@@@@@*,,,,,,,,,,,,,,,,,
-..................@@@@@@@@@@@@@@.                                  *@@@@@@@@@@@@@(,,,,,,,,,,,,,,,,,
-..................@@@@@@@@@@@@@                                      @@@@@@@@@@@@&,,,,,,,,,,,,,,,,,
-..................@@@@@@@@@@@&                                        @@@@@@@@@@@@,,,,,,,,,,,,,,,,,
-.................,@@@@@@@@@@@                                          @@@@@@@@@@@,,,,,,,,,,,,,,,,,
+
  -->
 
-<html class="{% if isDev %}dev{% endif %}">
+<html class="{% if isDev %}dev{% endif %}" lang="">
   <head>
-    <title>{% block title %}{% endblock %}</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% include '../layouts/_snippets/html-head.twig' %}
+
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/preview/assets/css/pew.css">
+
+    <title>Pingu preview</title>
     {% block component_scripts %}{% endblock %}
   </head>
   <body>
