Added a generation for title attribute and added lang to project.config

--- a/src/layouts/Base/base.twig
+++ b/src/layouts/Base/base.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="{% if isDev %}dev{% endif %}" lang="">
+<html class="{% if isDev %}dev{% endif %}" lang="{{ project.lang }}">
   <head>
     {% include '../_snippets/html-head.twig' %}
 
