--- a/src/preview/layout.twig
+++ b/src/preview/layout.twig
@@ -28,7 +28,7 @@
 
  -->
 
-<html class="{% if isDev %}dev{% endif %}" lang="">
+<html class="{% if isDev %}dev{% endif %}" lang="{{ project.lang }}">
   <head>
     {% include '../layouts/_snippets/html-head.twig' %}
 
