--- a/src/layouts/_snippets/html-head.twig
+++ b/src/layouts/_snippets/html-head.twig
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
 <link rel="manifest" href="assets/img/favicon/manifest.json">
 <link rel="mask-icon" href="assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="{{ project.themeColor }}">
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-with, initial-scale=1">
