Added langStrings to component.twig

--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -12,7 +12,7 @@
         </li>
         <li class="pew_breadcrumb__item">
           <button href="#" class="pew_breadcrumb__panel-trigger">
-            <span class="pew_breadcrumb__text">Components</span>
+            <span class="pew_breadcrumb__text">{{ lang.components }}</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" class="pew_breadcrumb__panel-trigger-icon"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
           </button>
         </li>
@@ -39,7 +39,7 @@
 
   <section class="pew_block pew_block--preview" id="preview">
     <div class="pew_container">
-      <h2 class="pew_subtitle">Preview</h2>
+      <h2 class="pew_subtitle">{{ lang.preview }}</h2>
     </div>
     <div class="pew_preview">
       <!-- AUTOINSERT COMPONENT -->
@@ -48,7 +48,7 @@
 
   <section class="pew_block pew_block--description" id="description">
     <div class="pew_container">
-      <h2 class="pew_subtitle">Description</h2>
+      <h2 class="pew_subtitle">{{ lang.description }}</h2>
       <div class="pew_markdown">
         <!-- AUTOINSERT DESCRIPTION -->
       </div>
@@ -57,7 +57,7 @@
 
   <section class="pew_block pew_block--code" id="code">
     <div class="pew_container">
-      <h2 class="pew_subtitle">Code</h2>
+      <h2 class="pew_subtitle">{{ lang.code }}</h2>
       <div class="pew_tabs">
         <ul class="pew_tabs__list" role="tablist">
           <li class="pew_tabs__item" role="presentation">
@@ -97,7 +97,7 @@
 
   <section class="pew_block pew_block--data" id="data">
     <div class="pew_container">
-      <h2 class="pew_subtitle">Data</h2>
+      <h2 class="pew_subtitle">{{ lang.data }}</h2>
       <pre class="pew_code pew_code--padding"><code class="language-yaml">{{ code.yaml }}</code></pre>
     </div>
   </section>
