--- a/src/layouts/_snippets/html-head.twig
+++ b/src/layouts/_snippets/html-head.twig
@@ -7,5 +7,5 @@
 <meta name="theme-color" content="{{ project.themeColor }}">
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="viewport" content="width=device-with, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Description max 150">
