--- a/src/components/Accordion/accordion.twig
+++ b/src/components/Accordion/accordion.twig
@@ -1,4 +1,4 @@
-<ul class="accordion" data-pingu="{{config.name}}" data-accordion-options='{{options}}' role="tablist">
+<ul class="accordion" data-pingu="{{config.name}}" data-accordion-options="{{options}}" role="tablist">
   {% set uid = uuid(config.name) %}
   {% for key, item in items %}
     <li class="accordion__item">
@@ -10,6 +10,8 @@
         type="button"
       >
         {{ item.title }}
+
+        {{ icon('plus', 'accordion__plus') }}
       </button>
       <div
         class="accordion__panel"
