Changed tmp and build structure and added the path thing with the dollar for twig

--- a/src/layouts/Base/base.twig
+++ b/src/layouts/Base/base.twig
@@ -3,11 +3,11 @@
   <head>
     {% include '../_snippets/html-head.twig' %}
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="$/assets/css/styles.css">
   </head>
   <body>
     {% block content %}{% endblock %}
 
-    <script src="assets/js/main.bundle.js"></script>
+    <script src="$/assets/js/main.bundle.js"></script>
   </body>
 </html>
