--- a/src/preview/component.twig
+++ b/src/preview/component.twig
@@ -1,5 +1,7 @@
 {% extends './layout.twig' %}
 
+{% set path_begin = '../' %}
+
 {% block title %}{{ config.title }}{% endblock %}
 
 {% block content %}
