--- a/src/preview/layout.twig
+++ b/src/preview/layout.twig
@@ -32,8 +32,8 @@
   <head>
     {% include '../layouts/_snippets/html-head.twig' %}
 
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/preview/assets/css/pew.css">
+    <link rel="stylesheet" href="$/assets/css/styles.css">
+    <link rel="stylesheet" href="$/preview/assets/css/pew.css">
 
     <title>Pingu preview</title>
     {% block component_scripts %}{% endblock %}
@@ -41,7 +41,7 @@
   <body>
     <header class="pew_header">
       <div class="pew_header__logo">
-        <img src="/preview/assets/img/logo.svg" class="pew_sidebar__image" alt="Pingu Logo">
+        <img src="$/preview/assets/img/logo.svg" class="pew_sidebar__image" alt="Pingu Logo">
       </div>
     </header>
     <main class="pew_main pew_main--layer">
@@ -52,7 +52,7 @@
         <!-- </div> -->
       </div>
     </main>
-    <script src="/assets/js/main.bundle.js"></script>
-    <script src="/preview/assets/js/pew.bundle.js"></script>
+    <script src="$/assets/js/main.bundle.js"></script>
+    <script src="$/preview/assets/js/pew.bundle.js"></script>
   </body>
 </html>
