#26 add polyfill js to layouts

--- a/src/preview/layout.twig
+++ b/src/preview/layout.twig
@@ -52,6 +52,7 @@
         <!-- </div> -->
       </div>
     </main>
+    <script src="$/assets/js/polyfill.js"></script>
     <script src="$/assets/js/main.bundle.js"></script>
     <script src="$/preview/assets/js/pew.bundle.js"></script>
   </body>
