--- a/src/layouts/Base/base.twig
+++ b/src/layouts/Base/base.twig
@@ -8,6 +8,7 @@
   <body>
     {% block content %}{% endblock %}
 
+    <script src="$/assets/js/polyfill.js"></script>
     <script src="$/assets/js/main.bundle.js"></script>
   </body>
 </html>
